--- a/cv-project/src/styles/Personal.css
+++ b/cv-project/src/styles/Personal.css
@@ -19,6 +19,12 @@
   height: 25px;
 }
 
+.personal-container p {
+  margin: 3px 0;
+}
 
-
+.personal-container input {
+  height: 21px;
+  font-size: 16px;
+}
 /* Fix styling while in edit mode */
